welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: '=' expected but ';' found.
  var l
^max2Value:4: error: '=' expected but ';' found.
  for (i<- 0 to nums.length -1){
^